--- a/index.html
+++ b/index.html
@@ -1,5 +1,76 @@
 ---
-layout: home
-title: "{{ site.title }}"
-nav: home
+layout: default
+title: Home
+permalink: /
 ---
+
+<section class="hero">
+  <img class="avatar" src="{{ site.author.avatar | relative_url }}" alt="{{ site.author.name }}">
+  <div class="hero-text">
+    <h1 class="hero-name">{{ site.author.name }}</h1>
+    {% if site.tagline and site.tagline != '' %}
+      <p class="hero-tagline">{{ site.tagline }}</p>
+    {% endif %}
+    <p class="hero-abstract">{{ site.description }}</p>
+
+    <!-- Social icons just below abstract -->
+    <div class="social-icons">
+      {% if site.author.email %}
+        <a href="mailto:{{ site.author.email }}" class="icon" aria-label="Email" title="Email">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6Zm2 .2v.4l8 5.2 8-5.2v-.4H4Z"/></svg>
+        </a>
+      {% endif %}
+      {% if site.social.github %}
+        <a href="https://github.com/{{ site.social.github }}" target="_blank" rel="noopener" class="icon" aria-label="GitHub" title="GitHub">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .5A11.5 11.5 0 0 0 8.3 22.9c.6.1.8-.2.8-.6v-2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.4-1.3-1.7-1.3-1.7-1.1-.7.1-.7.1-.7 1.2.1 1.8 1.2 1.8 1.2 1 1.8 2.7 1.3 3.4 1 .1-.8.4-1.3.8-1.6-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.3 1.2-3.1-.1-.3-.5-1.5.1-3.2 0 0 1-.3 3.2 1.2a11.2 11.2 0 0 1 5.9 0c2.2-1.5 3.2-1.2 3.2-1.2.7 1.7.2 2.9.1 3.2.8.8 1.2 1.9 1.2 3.1 0 4.5-2.7 5.5-5.3 5.8.4.3.8 1.1.8 2.2v3.2c0 .3.2.7.8.6A11.5 11.5 0 0 0 12 .5Z"/></svg>
+        </a>
+      {% endif %}
+      {% if site.social.scholar %}
+        <a href="{{ site.social.scholar }}" target="_blank" rel="noopener" class="icon" aria-label="Google Scholar" title="Google Scholar">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3 2 9l10 6 10-6-10-6Zm-6.5 9v3l6.5 3.9L18.5 15v-3L12 16.9 5.5 12Z"/></svg>
+        </a>
+      {% endif %}
+      {% if site.social.linkedin %}
+        <a href="{{ site.social.linkedin }}" target="_blank" rel="noopener" class="icon" aria-label="LinkedIn" title="LinkedIn">
+          <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5ZM3 9h4v12H3V9Zm7 0h3.8v1.7h.05c.53-1 1.83-2.05 3.77-2.05 4.03 0 4.77 2.65 4.77 6.1V21h-4v-5.3c0-1.26-.02-2.88-1.76-2.88-1.76 0-2.03 1.37-2.03 2.78V21H10V9Z"/></svg>
+        </a>
+      {% endif %}
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <h2>Selected Publications</h2>
+  <ul class="list list-pubs">
+    {% assign selected = site.data.publications | where: "selected", true %}
+    {% for p in selected %}
+      <li>
+        <span class="pub-title">{{ p.title }}</span>
+        {% if p.venue %}<span class="pub-venue"> · {{ p.venue }}{% if p.year %} {{ p.year }}{% endif %}</span>{% endif %}
+        {% if p.link %} — <a href="{{ p.link }}" target="_blank" rel="noopener">paper</a>{% endif %}
+        {% if p.code %} · <a href="{{ p.code }}" target="_blank" rel="noopener">code</a>{% endif %}
+        {% if p.project %} · <a href="{{ p.project }}" target="_blank" rel="noopener">project</a>{% endif %}
+      </li>
+    {% endfor %}
+    {% if selected.size == 0 %}
+      <li>(Add items with `selected: true` in `_data/publications.yml`.)</li>
+    {% endif %}
+  </ul>
+</section>
+
+<section class="section">
+  <h2>Recent News</h2>
+  <ul class="list list-news">
+    {% for n in site.data.news limit:8 %}
+      <li>
+        <span class="news-date">{{ n.date }}</span>
+        <span class="news-text">
+          {% if n.url %}<a href="{{ n.url }}" target="_blank" rel="noopener">{{ n.text }}</a>{% else %}{{ n.text }}{% endif %}
+        </span>
+      </li>
+    {% endfor %}
+    {% if site.data.news == nil or site.data.news.size == 0 %}
+      <li>(Add items in `_data/news.yml`.)</li>
+    {% endif %}
+  </ul>
+</section>
