--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@ permalink: /
       <p class="hero-tagline">{{ site.tagline }}</p>
     {% endif %}
     <p class="hero-abstract">{{ site.description }}</p>
+<p class="hero-abstract">
+  I study what I call the <strong>broken compass problem</strong> in speech systems—when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it.
+</p>
+
+<p class="hero-abstract">
+  As a postdoctoral researcher, my work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
+</p>
+
+<div class="abstract-expanded">
+  <p>
+    Over the past decade, I’ve had the privilege of working across both academia and industry. At Microsoft, I most recently served as a Principal Researcher and Head of Data Domain in the Teams organization. Along the way I co-led the NOTSOFAR-1 Challenge and benchmark, won the global Microsoft Hackathon with an accent-softening solution for Teams, and co-authored research on diarization and ASR.
+  </p>
+  <p>
+    Parallel to my industry tenure, I pursued a direct-track PhD in Electrical and Computer Engineering at the Technion under the supervision of Prof. Israel Cohen. Outside of research, I find balance in nature—a space where many of my ideas take shape.
+  </p>
+</div>
 
     <!-- Social icons just below abstract -->
     <div class="social-icons">
