--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ permalink: /
 
     <!-- Visionary + grounding lines -->
     <p class="hero-abstract">
-      I study what I call the <strong>broken compass problem</strong> in speech systems—when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it.
+      I study what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it.
     </p>
     <p class="hero-abstract">
       As a postdoctoral researcher, my work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
@@ -53,10 +53,10 @@ permalink: /
 <section class="section">
   <div class="abstract-expanded">
     <p>
-      Over the past decade, I’ve had the privilege of working across both academia and industry. At Microsoft, I most recently served as a Principal Researcher and Head of Data Domain in the Teams organization. Along the way I co-led the NOTSOFAR-1 Challenge and benchmark, won the global Microsoft Hackathon with an accent-softening solution for Teams, and co-authored research on diarization and ASR.
+      Between 2015-2025, I’ve had the privilege of being a Research Scientist in the industry. Most recently, I served in Microsoft as a Principal Researcher and Head of Data Domain in the Teams organization. Along the way I co-led the NOTSOFAR-1 Challenge and benchmark, won the global Microsoft Hackathon with an accent-softening solution for Teams, and co-authored research on diarization and ASR.
     </p>
     <p>
-      Parallel to my industry tenure, I pursued a direct-track PhD in Electrical and Computer Engineering at the Technion under the supervision of Prof. Israel Cohen. Outside of research, I find balance in nature—a space where many of my ideas take shape.
+      Parallel to my industry tenure, between 2018-2023 I pursued a direct-track PhD in Electrical and Computer Engineering at the Technion under the supervision of Prof. Israel Cohen, publishing 10 peer-reviewed papers that have pushed the barriers of Acoustic-echo Cancellation.
     </p>
   </div>
 </section>
