--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@ permalink: /
 
     <!-- Visionary + grounding lines -->
     <p class="hero-abstract">
-      I study what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it.
-    </p>
-    <p class="hero-abstract">
-      As a postdoctoral researcher, my work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
+      As a postdoctoral researcher, I focus on what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it.
+      My work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
     </p>
 
     <!-- Small circular social icons (centered row) -->
@@ -53,10 +51,10 @@ permalink: /
 <section class="section">
   <div class="abstract-expanded">
     <p>
-      Between 2015-2025, I’ve had the privilege of being a Research Scientist in the industry. Most recently, I served in Microsoft as a Principal Researcher and Head of Data Domain in the Teams organization. Along the way I co-led the NOTSOFAR-1 Challenge and benchmark, won the global Microsoft Hackathon with an accent-softening solution for Teams, and co-authored research on diarization and ASR.
+      Between 2015-2025, I've been a Research Scientist in the industry, working on speech, language, and vision challenges. Most recently I've served in Microsoft as a Principal Researcher and Head of Data Domain in the Teams organization.
     </p>
     <p>
-      Parallel to my industry tenure, between 2018-2023 I pursued a direct-track PhD in Electrical and Computer Engineering at the Technion under the supervision of Prof. Israel Cohen, publishing 10 peer-reviewed papers that have pushed the barriers of Acoustic-echo Cancellation.
+      Parallel to my industry tenure, from 2018 to 2023 I pursued a direct-track PhD in Electrical and Computer Engineering at the Technion under the supervision of Prof. Israel Cohen, pushing the barriers of Acoustic-echo Cancellation.
     </p>
   </div>
 </section>
