--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@ permalink: /
     {% endif %}
 
     <p class="hero-abstract">
-      I study what I call the <strong>broken compass problem</strong> in speech systems—when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it.
-    </p>
-    <p class="hero-abstract">
-      As a postdoctoral researcher, my work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
+      As a postdoctoral researcher, I focus on what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it.
+      My work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
     </p>
 
     <div class="social-icons">
