--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ permalink: /
     {% endif %}
 
     <p class="hero-abstract">
-      As a postdoctoral researcher, I focus on what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and misdirects research, slowing progress instead of accelerating it. My work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
+      Hi! I'm a postdoc researcher and I focus on a problem I call the <strong>broken compass</strong> in speech systems: when evaluation is ambiguous and misdirects and slows research, instead of accelerating it. My work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
     </p>
 
     <!-- Short-bio placeholder -->
