--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@ permalink: /
       <p class="hero-tagline">{{ site.tagline }}</p>
     {% endif %}
 
-    <p class="hero-abstract">
-      Hi! I'm a postdoc researcher and I focus on a problem I call the <strong>broken compass</strong> in speech systems: when evaluation is ambiguous and misdirects and slows research, instead of accelerating it. My work seeks to rebuild that compass: making speech, music, and audio systems more reliable by aligning evaluation with human perception.
-    </p>
+<p class="hero-abstract">
+  I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous, misguides progress, and slows innovation instead of accelerating it. 
+  My work seeks to rebuild that compass - making speech, music, and audio systems more reliable by anchoring evaluation in human perception.
+</p>
+
 
     <!-- Short-bio placeholder -->
-    <p class="hero-bio placeholder">[Short bio goes here — keep it to 1–2 sentences.]</p>
+    <p class="hero-bio placeholder">
+      I have spent the past decade as a hands-on scientist in industry, working on speech, language, vision, and time-series challenges.
+      Most recently, I've served as Principal Researcher and the Head of the Data Domain in Microsoft Teams (2021–2025). 
+      In parallel, I pursued a direct-track PhD at the Technion (2018–2023), creating personalized and user-centric speech systems.
+    </p>
 
     <!-- Social icons -->
     <div class="social-icons">
