--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@ permalink: /
           <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5ZM3 9h4v12H3V9Zm7 0h3.8v1.7h.05c.53-1 1.83-2.05 3.77-2.05 4.03 0 4.77 2.65 4.77 6.1V21h-4v-5.3c0-1.26-.02-2.88-1.76-2.88-1.76 0-2.03 1.37-2.03 2.78V21H10V9Z"/></svg>
         </a>
       {% endif %}
+      {% if site.cv and site.cv != "" %}
+        <a href="{{ site.cv | relative_url }}" target="_blank" class="icon" aria-label="CV" title="CV">
+          <!-- simple file-text icon -->
+          <svg viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M6 2h9l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2Zm8 1.5V9h5.5L14 3.5Z"/>
+          </svg>
+        </a>
+      {% endif %}
+
     </div>
   </div>
 </section>
