--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@ permalink: /
       {% endif %}
       {% if site.social.cv %}
         <a href="{{ site.social.cv | relative_url }}" target="_blank" class="icon" aria-label="CV" title="CV">
-          <!-- simple file-text icon -->
+          <!-- Stylish document-text icon -->
           <svg viewBox="0 0 24 24" aria-hidden="true">
-            <path d="M6 2h9l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2Zm8 1.5V9h5.5L14 3.5Z"/>
+            <path d="M6 2a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm7 1.5L18.5 9H13V3.5ZM8 13h8v1.5H8V13Zm0 3h8v1.5H8V16Zm0-6h5v1.5H8V10Z"/>
           </svg>
         </a>
       {% endif %}
+
 
     </div>
   </div>
