--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@ permalink: /
       <p class="tag">{{ site.tagline }}</p>
     {% endif %}
 
-    <p class="lead">
-      I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous, misguides progress, and slows innovation instead of accelerating it.
-    </p>
-    <p class="lead">
-      My work seeks to rebuild that compass—making speech, music, and audio systems more reliable by anchoring evaluation in human perception.
-    </p>
+<p class="hero-abstract">
+  I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous, misguides progress, and slows innovation instead of accelerating it. 
+  My work seeks to rebuild that compass - making speech, music, and audio systems more reliable by anchoring evaluation in human perception.
+</p>
 
-    <p class="bio">[Short bio goes here — keep it to 1–2 sentences.]</p>
+
+
+    <p class="bio">I've been an industry research scientist since 2015, building and leading projects addressing speech, language, vision, and time-series challenge. Most recently, I served as Principal Researcher and Head of the Data Domain in Microsoft Teams (2021–2025). In parallel, I pursued a direct-track PhD at the Technion (2018–2023), exploring efficient personalization in speech systems.
+</p>
 
     <div class="social">
       {% if site.author.email %}<a href="mailto:{{ site.author.email }}">Email</a>{% endif %}
