--- a/index.html
+++ b/index.html
@@ -5,32 +5,66 @@ permalink: /
 ---
 
 <section class="hero container">
-  <div class="photo">
-    <img src="{{ site.author.avatar | relative_url }}" alt="{{ site.author.name }}">
+  <!-- Left: photo + icons -->
+  <div class="photo-col">
+    <div class="photo">
+      <img src="{{ site.author.avatar | relative_url }}" alt="{{ site.author.name }}">
+    </div>
+
+    <!-- Social/logo row centered under image -->
+    <div class="social-logos">
+      {% if site.author.email %}
+      <a href="mailto:{{ site.author.email }}" class="icn" aria-label="Email" title="Email">
+        <!-- envelope -->
+        <svg viewBox="0 0 24 24"><path d="M2 6a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6Zm2 .2v.4l8 5.2 8-5.2v-.4H4Z"/></svg>
+      </a>
+      {% endif %}
+
+      {% if site.social.github %}
+      <a href="https://github.com/{{ site.social.github }}" target="_blank" rel="noopener" class="icn" aria-label="GitHub" title="GitHub">
+        <!-- github -->
+        <svg viewBox="0 0 24 24"><path d="M12 .5A11.5 11.5 0 0 0 8.3 22.9c.6.1.8-.2.8-.6v-2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.4-1.3-1.7-1.3-1.7-1.1-.7.1-.7.1-.7 1.2.1 1.8 1.2 1.8 1.2 1 1.8 2.7 1.3 3.4 1 .1-.8.4-1.3.8-1.6-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.3 1.2-3.1-.1-.3-.5-1.5.1-3.2 0 0 1-.3 3.2 1.2a11.2 11.2 0 0 1 5.9 0c2.2-1.5 3.2-1.2 3.2-1.2.7 1.7.2 2.9.1 3.2.8.8 1.2 1.9 1.2 3.1 0 4.5-2.7 5.5-5.3 5.8.4.3.8 1.1.8 2.2v3.2c0 .3.2.7.8.6A11.5 11.5 0 0 0 12 .5Z"/></svg>
+      </a>
+      {% endif %}
+
+      {% if site.social.scholar %}
+      <a href="{{ site.social.scholar }}" target="_blank" rel="noopener" class="icn" aria-label="Scholar" title="Google Scholar">
+        <!-- scholar (cap/book) -->
+        <svg viewBox="0 0 24 24"><path d="M12 3 2 9l10 6 10-6-10-6Zm-6.5 9v3l6.5 3.9L18.5 15v-3L12 16.9 5.5 12Z"/></svg>
+      </a>
+      {% endif %}
+
+      {% if site.social.linkedin %}
+      <a href="{{ site.social.linkedin }}" target="_blank" rel="noopener" class="icn" aria-label="LinkedIn" title="LinkedIn">
+        <!-- linkedin -->
+        <svg viewBox="0 0 24 24"><path d="M4.98 3.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5ZM3 9h4v12H3V9Zm7 0h3.8v1.7h.05c.53-1 1.83-2.05 3.77-2.05 4.03 0 4.77 2.65 4.77 6.1V21h-4v-5.3c0-1.26-.02-2.88-1.76-2.88-1.76 0-2.03 1.37-2.03 2.78V21H10V9Z"/></svg>
+      </a>
+      {% endif %}
+
+      {% if site.cv and site.cv != "" %}
+      <a href="{{ site.cv | relative_url }}" target="_blank" rel="noopener" class="icn" aria-label="CV" title="CV">
+        <!-- document-text -->
+        <svg viewBox="0 0 24 24"><path d="M6 2a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm7 1.5L18.5 9H13V3.5ZM8 10h6v1.5H8V10Zm0 3h8v1.5H8V13Zm0 3h8v1.5H8V16Z"/></svg>
+      </a>
+      {% endif %}
+    </div>
   </div>
+
+  <!-- Right: intro text -->
   <div class="text">
     <h1>{{ site.author.name }}</h1>
     {% if site.tagline and site.tagline != '' %}
       <p class="tag">{{ site.tagline }}</p>
     {% endif %}
 
-<p class="hero-abstract">
-  I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous, misguides progress, and slows innovation instead of accelerating it. 
-  My work seeks to rebuild that compass - making speech, music, and audio systems more reliable by anchoring evaluation in human perception.
-</p>
+    <p class="lead">
+      I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous, misguides progress, and slows innovation instead of accelerating it.
+    </p>
+    <p class="lead">
+      My work seeks to rebuild that compass—making speech, music, and audio systems more reliable by anchoring evaluation in human perception.
+    </p>
 
-
-
-    <p class="bio">I've been an industry research scientist since 2015, building and leading projects addressing speech, language, vision, and time-series challenge. Most recently, I served as Principal Researcher and Head of the Data Domain in Microsoft Teams (2021–2025). In parallel, I pursued a direct-track PhD at the Technion (2018–2023), exploring efficient personalization in speech systems.
-</p>
-
-    <div class="social">
-      {% if site.author.email %}<a href="mailto:{{ site.author.email }}">Email</a>{% endif %}
-      {% if site.social.github %}<a href="https://github.com/{{ site.social.github }}" target="_blank" rel="noopener">GitHub</a>{% endif %}
-      {% if site.social.scholar %}<a href="{{ site.social.scholar }}" target="_blank" rel="noopener">Scholar</a>{% endif %}
-      {% if site.social.linkedin %}<a href="{{ site.social.linkedin }}" target="_blank" rel="noopener">LinkedIn</a>{% endif %}
-      {% if site.cv %}<a href="{{ site.cv | relative_url }}" target="_blank" rel="noopener">CV</a>{% endif %}
-    </div>
+    <p class="bio">[Short bio goes here — keep it to 1–2 sentences.]</p>
   </div>
 </section>
 
@@ -43,11 +77,31 @@ permalink: /
       <li>
         <div class="pub-title">
           {{ p.title }}
-          <span class="links">
-            {% if paper_url and paper_url != "" %}<a href="{{ paper_url | relative_url }}" target="_blank" rel="noopener">Paper</a>{% endif %}
-            {% if p.code and p.code != "" %}<a href="{{ p.code }}" target="_blank" rel="noopener">Code</a>{% endif %}
-            {% if p.project and p.project != "" %}<a href="{{ p.project | relative_url }}" target="_blank" rel="noopener">Project</a>{% endif %}
-            {% if p.video and p.video != "" %}<a href="{{ p.video }}" target="_blank" rel="noopener">Video</a>{% endif %}
+          <span class="links icons">
+            {% if paper_url and paper_url != "" %}
+              <a href="{{ paper_url | relative_url }}" target="_blank" rel="noopener" aria-label="Paper" title="Paper">
+                <!-- paper -->
+                <svg viewBox="0 0 24 24"><path d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2Zm7 1.5V8h4.5L13 3.5Z"/></svg>
+              </a>
+            {% endif %}
+            {% if p.code and p.code != "" %}
+              <a href="{{ p.code }}" target="_blank" rel="noopener" aria-label="Code" title="Code">
+                <!-- github -->
+                <svg viewBox="0 0 24 24"><path d="M12 .5A11.5 11.5 0 0 0 8.3 22.9c.6.1.8-.2.8-.6v-2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.4-1.3-1.7-1.3-1.7-1.1-.7.1-.7.1-.7 1.2.1 1.8 1.2 1.8 1.2 1 1.8 2.7 1.3 3.4 1 .1-.8.4-1.3.8-1.6-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.3 1.2-3.1-.1-.3-.5-1.5.1-3.2 0 0 1-.3 3.2 1.2a11.2 11.2 0 0 1 5.9 0c2.2-1.5 3.2-1.2 3.2-1.2.7 1.7.2 2.9.1 3.2.8.8 1.2 1.9 1.2 3.1 0 4.5-2.7 5.5-5.3 5.8.4.3.8 1.1.8 2.2v3.2c0 .3.2.7.8.6A11.5 11.5 0 0 0 12 .5Z"/></svg>
+              </a>
+            {% endif %}
+            {% if p.project and p.project != "" %}
+              <a href="{{ p.project | relative_url }}" target="_blank" rel="noopener" aria-label="Project" title="Project page">
+                <!-- globe -->
+                <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 .001 20.001A10 10 0 0 0 12 2Zm0 1.5c1.7 0 3.2.5 4.5 1.4-2.4.6-4.3 2.9-5 6.1H6.2A8.5 8.5 0 0 1 12 3.5Zm-8.3 7.5h4.4c-.1.5-.1 1-.1 1.5s0 1 .1 1.5H3.7A8.4 8.4 0 0 1 3.5 12c0-.3 0-.7.2-1Zm1.5 5.9h5.3c.7 3.1 2.6 5.4 5 6a8.5 8.5 0 0 1-10.3-6Zm6.8 0h5.3A7.8 7.8 0 0 1 12 21.5c-1.4-.3-2.7-2-3.3-4.6ZM20.3 9h-5.3c-.6-2.6-1.9-4.3-3.3-4.6A7.8 7.8 0 0 1 20.3 9ZM15 12c0 .5 0 1-.1 1.5H9.1A7.7 7.7 0 0 1 9 12c0-.5 0-1 .1-1.5h5.8ZM14.2 18h5.1A8.5 8.5 0 0 1 18 20.6c-1.7-.3-3.1-1.3-3.8-2.6Z"/></svg>
+              </a>
+            {% endif %}
+            {% if p.video and p.video != "" %}
+              <a href="{{ p.video }}" target="_blank" rel="noopener" aria-label="Video" title="Video">
+                <!-- play -->
+                <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7L8 5Z"/></svg>
+              </a>
+            {% endif %}
           </span>
         </div>
         {% if p.authors %}
@@ -66,5 +120,14 @@ permalink: /
         </div>
       </li>
     {% endfor %}
+  </ul>
+</section>
+
+<section class="section container">
+  <h2>Recent News</h2>
+  <ul class="news">
+    <li><span class="date">2025-08-24</span> Launched project page with audio demos.</li>
+    <li><span class="date">2025-08-20</span> Preprint uploaded to arXiv.</li>
+    <li><span class="date">2025-08-15</span> Invited talk accepted — details soon.</li>
   </ul>
 </section>
