--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ permalink: /
       </a>
       {% endif %}
 
-      {% if site.cv and site.cv != "" %}
-      <a href="{{ site.cv | relative_url }}" target="_blank" rel="noopener" class="icn" aria-label="CV" title="CV">
+      {% if site.social.cv and site.social.cv != "" %}
+      <a href="{{ site.social.cv | relative_url }}" target="_blank" rel="noopener" class="icn" aria-label="CV" title="CV">
         <!-- document-text -->
         <svg viewBox="0 0 24 24"><path d="M6 2a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h12a2 2 0 0 0 2-2V8l-6-6H6Zm7 1.5L18.5 9H13V3.5ZM8 10h6v1.5H8V10Zm0 3h8v1.5H8V13Zm0 3h8v1.5H8V16Z"/></svg>
       </a>
