--- a/index.html
+++ b/index.html
@@ -53,13 +53,14 @@ permalink: /
     {% endif %}
 
     <p class="lead">
-      I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous, misguides progress, and slows innovation instead of accelerating it.
-    </p>
-    <p class="lead">
-      My work seeks to rebuild that compass—making speech, music, and audio systems more reliable by anchoring evaluation in human perception.
+      I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and misguides progress and innovation, instead of accelerating them.
+      My work seeks to rebuild that compass by anchoring evaluation in human perception - making speech, music, and audio systems more reliable.
     </p>
 
-    <p class="bio">[Short bio goes here — keep it to 1–2 sentences.]</p>
+    <p class="bio">I've been an industry Research Scientist since 2015, building and leading projects addressing challenges in speech, language, vision, and time-series modalities. 
+      Most recently, I served as Principal Researcher and Head of the Data Domain in Microsoft Teams (2021–2025). 
+      In parallel, I pursued a direct-track PhD at the Technion (2018–2023), advancing efficient personalization in speech systems.
+</p>
   </div>
 </section>
 
