--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ permalink: /
     {% endif %}
 
     <p class="lead">
-      I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and misguides progress and innovation, instead of accelerating them.
-      My work seeks to rebuild that compass by anchoring evaluation in human perception - making speech, music, and audio systems more reliable.
+      I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems: when evaluation is ambiguous and slows innovation instead of driving it. 
+      My work seeks to rebuild that compass by grounding evaluation in human perception-enabling more reliable speech, music, and audio systems across robotics, assistive technologies, and human-machine interactions.
     </p>
 
     <p class="bio">I've been an industry Research Scientist since 2015, building and leading projects addressing challenges in speech, language, vision, and time-series modalities. 
