--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ permalink: /
 </section>
 
 <section class="section container">
-  <h2>Recent News</h2>
+  <h2>News and Updates</h2>
   <ul class="news">
     <li><span class="date">2025-08-24</span> Launched project page with audio demos.</li>
     <li><span class="date">2025-08-20</span> Preprint uploaded to arXiv.</li>
