--- a/index.html
+++ b/index.html
@@ -1,3 +1,95 @@
+---
+layout: default
+title: Home
+permalink: /
+---
+
+<section class="hero container">
+  <!-- Left: photo -->
+  <div class="photo-col">
+    <div class="photo">
+      <img src="{{ site.author.avatar | relative_url }}" alt="{{ site.author.name }}">
+    </div>
+  </div>
+
+  <!-- Right: intro -->
+  <div class="text">
+    <h1>{{ site.author.name }}</h1>
+    {% if site.tagline and site.tagline != '' %}
+      <p class="tag">{{ site.tagline }}</p>
+    {% endif %}
+
+    <p class="lead">
+      I’m a postdoctoral researcher tackling what I call the <strong>broken compass problem</strong> in speech systems:
+      when evaluation is ambiguous and slows innovation instead of driving it.
+      My work seeks to rebuild that compass by grounding evaluation in human perception—enabling more reliable speech,
+      music, and audio systems across robotics, assistive technologies, and human–machine interactions.
+    </p>
+
+    <p class="bio">
+      I've been an industry Research Scientist since 2015, building and leading projects addressing challenges in speech,
+      language, vision, and time-series modalities. Most recently, I served as Principal Researcher and Head of the Data
+      Domain in Microsoft Teams (2021–2025). In parallel, I pursued a direct-track PhD at the Technion (2018–2023),
+      advancing efficient personalization in speech systems.
+    </p>
+  </div>
+</section>
+
+<!-- Selected Publications -->
+<section class="section container">
+  <h2>Selected Publications</h2>
+  <ul class="pubs">
+    {% assign selected = site.data.publications | where: "selected", true %}
+    {% for p in selected %}
+      {% assign paper_url = p.pdf | default: p.paper | default: p.link %}
+      <li>
+        <div class="pub-title">{{ p.title }}</div>
+
+        {% if p.authors %}
+          <div class="pub-authors">
+            {{ p.authors
+              | replace: 'Amir Ivry','<span class="me">Amir Ivry</span>'
+              | replace: 'Ivry, Amir','<span class="me">Ivry, Amir</span>'
+              | replace: 'A. Ivry','<span class="me">A. Ivry</span>'
+              | replace: 'Amir I.','<span class="me">Amir I.</span>' }}
+          </div>
+        {% endif %}
+
+        <div class="pub-meta-row">
+          <div class="left">
+            {% if p.venue %}<span>{{ p.venue }}</span>{% endif %}
+            {% if p.venue and p.year %}<span class="dot">·</span>{% endif %}
+            {% if p.year %}<span>{{ p.year }}</span>{% endif %}
+          </div>
+          <div class="right links icons">
+            {% if paper_url and paper_url != "" %}
+              <a href="{{ paper_url | relative_url }}" target="_blank" rel="noopener" aria-label="Paper" title="Paper">
+                <svg viewBox="0 0 24 24"><path d="M6 2h7l5 5v13a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2Zm7 1.5V8h4.5L13 3.5Z"/></svg>
+              </a>
+            {% endif %}
+            {% if p.code and p.code != "" %}
+              <a href="{{ p.code }}" target="_blank" rel="noopener" aria-label="Code" title="Code">
+                <svg viewBox="0 0 24 24"><path d="M12 .5A11.5 11.5 0 0 0 8.3 22.9c.6.1.8-.2.8-.6v-2c-3.2.7-3.9-1.4-3.9-1.4-.5-1.4-1.3-1.7-1.3-1.7-1.1-.7.1-.7.1-.7 1.2.1 1.8 1.2 1.8 1.2 1 1.8 2.7 1.3 3.4 1 .1-.8.4-1.3.8-1.6-2.6-.3-5.3-1.3-5.3-5.8 0-1.3.5-2.3 1.2-3.1-.1-.3-.5-1.5.1-3.2 0 0 1-.3 3.2 1.2a11.2 11.2 0 0 1 5.9 0c2.2-1.5 3.2-1.2 3.2-1.2.7 1.7.2 2.9.1 3.2.8.8 1.2 1.9 1.2 3.1 0 4.5-2.7 5.5-5.3 5.8.4.3.8 1.1.8 2.2v3.2c0 .3.2.7.8.6A11.5 11.5 0 0 0 12 .5Z"/></svg>
+              </a>
+            {% endif %}
+            {% if p.project and p.project != "" %}
+              <a href="{{ p.project | relative_url }}" target="_blank" rel="noopener" aria-label="Project" title="Project page">
+                <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 .001 20.001A10 10 0 0 0 12 2Zm0 1.5c1.7 0 3.2.5 4.5 1.4-2.4.6-4.3 2.9-5 6.1H6.2A8.5 8.5 0 0 1 12 3.5Zm-8.3 7.5h4.4c-.1.5-.1 1-.1 1.5s0 1 .1 1.5H3.7A8.4 8.4 0 0 1 3.5 12c0-.3 0-.7.2-1Zm1.5 5.9h5.3c.7 3.1 2.6 5.4 5 6a8.5 8.5 0 0 1-10.3-6Zm6.8 0h5.3A7.8 7.8 0 0 1 12 21.5c-1.4-.3-2.7-2-3.3-4.6ZM20.3 9h-5.3c-.6-2.6-1.9-4.3-3.3-4.6A7.8 7.8 0 0 1 20.3 9ZM15 12c0 .5 0 1-.1 1.5H9.1A7.7 7.7 0 0 1 9 12c0-.5 0-1 .1-1.5h5.8ZM14.2 18h5.1A8.5 8.5 0 0 1 18 20.6c-1.7-.3-3.1-1.3-3.8-2.6Z"/></svg>
+              </a>
+            {% endif %}
+            {% if p.video and p.video != "" %}
+              <a href="{{ p.video }}" target="_blank" rel="noopener" aria-label="Video" title="Video">
+                <svg viewBox="0 0 24 24"><path d="M8 5v14l11-7L8 5Z"/></svg>
+              </a>
+            {% endif %}
+          </div>
+        </div>
+      </li>
+    {% endfor %}
+  </ul>
+</section>
+
+<!-- News (sorted by date, 10 + expand) -->
 <section class="section container">
   <h2>News</h2>
 
@@ -30,9 +122,10 @@
     var btn = document.getElementById('news-toggle');
     if (!btn) return;
     btn.addEventListener('click', function () {
-      var hidden = document.querySelectorAll('.news-item.is-hidden');
-      hidden.forEach(function (el) { el.classList.remove('is-hidden'); });
-      btn.style.display = 'none'; // one-way expand
+      document.querySelectorAll('.news-item.is-hidden').forEach(function (el) {
+        el.classList.remove('is-hidden');
+      });
+      btn.style.display = 'none';
     });
   })();
 </script>
